Fix icon size and alignment inside card header

--- a/labsystem/scss/components/_lab-card.scss
+++ b/labsystem/scss/components/_lab-card.scss
@@ -94,7 +94,7 @@ $card-compact-padding: $spacing-03 $spacing-04;
 
   .lab-card-category {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     margin-top: 0;
     margin-bottom: $spacing-01;
 
